--- a/decisioning_dashboard/src/index.css
+++ b/decisioning_dashboard/src/index.css
@@ -1,10 +1,12 @@
-body {
+body, header {
   margin: 0;
   font-family: 'Poppins';
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: rgb(233, 235, 73);
+  min-height: 80vh;
 }
+
 
 code {
   font-family: 'Poppins';
