--- a/decisioning_dashboard/src/components/styles/navBar.module.css
+++ b/decisioning_dashboard/src/components/styles/navBar.module.css
@@ -3,6 +3,12 @@
     flex-direction: row;
     background-color: #000055;
     justify-content: center;
+
+    position: -webkit-sticky; /* For Safari */
+    position: sticky;
+    top: 0;
+    z-index: 1000; /* Ensure it stays above other content */
+
     /* border: 0;
     margin: 0;
     padding: 0; */
@@ -22,7 +28,7 @@
 
 }
 
-li {
+.pLink {
     flex-direction: row;
     list-style-type: none; /* Remove bullets */
 
