--- a/decisioning_dashboard/src/components/styles/Tables.module.css
+++ b/decisioning_dashboard/src/components/styles/Tables.module.css
@@ -5,11 +5,18 @@
     
 }
 
+.caisTableBody{
+    border: 1px solid;
+    border-collapse: collapse;
+    width: 50%;
+    
+}
+
 .tableHeader{
     border: 1px solid;
     background-color: #000055;
     color: white;
-    text-align: right;
+    text-align: center;
     
 }
 
@@ -25,6 +32,7 @@
 
 .tableCell{
     color: white;
+    border: 1px solid;
 }
 
 
